add html to home page.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -37,19 +37,16 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="/projects" style='font-weight: bold; color:#1F7FC3; font-size: 15px;'>HOME</a>
+              <a class="nav-link js-scroll-trigger" href="#intro" style='font-weight: bold; font-size: 15px;'>HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" style='font-size: 15px;' href="/projects">SERVICES</a>
+              <a class="nav-link js-scroll-trigger" style='font-size: 15px; font-weight: bold' href="#services">SERVICES</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" style='font-size: 15px;'  href="/api">Web Dev</a>
+              <a class="nav-link js-scroll-trigger" style='font-size: 15px; font-weight: bold' href="#about">ABOUT US</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" style='font-size: 15px;' href="/api">ABOUT US</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" style='font-size: 15px;' href="/api">CONTACT</a>
+              <a class="nav-link js-scroll-trigger" style='font-size: 15px; font-weight: bold' href="#contact">CONTACT</a>
             </li>
           </ul>
         </div>
@@ -62,12 +59,16 @@
         <div style='justify-content: center;' class="row">
         </div>
         <br>
+        <br>
+        <br>
         <div>
           <h1 id='title' style='color: #1B1B1E'>
             YOUR
             <br>
             INSIGHTS
           </h1>
+          <div style='width: 52vw; border-top: solid; border-color: white;'>
+          </div>
           <h1 id='title'>
             DELIVERING
             <br>
@@ -77,6 +78,73 @@
             MISSION | PROVIDE LIFT<br><br>
           </h3>
           </dir>
+        </div>
+        <br>
+        <div style='justify-content: center' class="row">
+          <div class="col-4">
+          </div>
+        </div>
+      </div>
+    </section>
+    <div style='border-top: solid; border-color: white;'>
+    </div>
+    <section style='background-color: #42484D;'
+class='fade-scroll' display='block' id='services'>
+      <div style='justify-content: center' class="container">
+        <div style='justify-content: center;' class="row">
+        </div>
+        <br>
+        <br>
+        <br>
+        <div>
+          <h1 id='title' style='color: white'>
+            OUR
+            <br>
+            SERVICES
+          </h1>
+          <div class='row' id='titleSub2'>
+            <div class='col'>
+              <p>Products</p>
+              <ul>
+                <li id='titleSub2Sub'>
+                  EcoInsights
+                </li>
+                <li id='titleSub2Sub'>
+                  SaturYAY
+                </li>
+                <li id='titleSub2Sub'>
+                  CompACT
+                </li>
+              </ul>
+            </div>
+            <div class='col'>
+              <p>Consulting</p>
+              <ul>
+                <li id='titleSub2Sub'>
+                  We specialize in data visualization, data manipulation, and automation.
+                </li>
+              </ul>
+            </div>
+            <div class='col'>
+              <p>Hosting</p>
+              <ul>
+                <li id='titleSub2Sub'>
+                  Custom BI Platform to present your analytics.
+                </li>
+              </ul>
+            </div>
+            <div class='col'>
+              <p>Full Stack Web Development</p>
+              <ul>
+                <li id='titleSub2Sub'>
+                  Build quick and effective websites.
+                </li>
+                <li id='titleSub2Sub'>
+                  Website hosting.
+                </li>
+              </ul>
+            </div>
+          </div>
           <div href='#webdev' style='justify-content: center;' class='row'>
               <span class="fa-stack fa-3x">
                 <i  class="fa fa-chevron-down fa-stack-1x"></i>
@@ -92,9 +160,77 @@
     </section>
     <div style='border-top: solid; border-color: white;'>
     </div>
+    <section class='fade-scroll' display='block' id='about'>
+      <div style='justify-content: center' class="container">
+        <div style='justify-content: center;' class="row">
+        </div>
+        <br>
+        <br>
+        <br>
+        <div>
+          <h1 id='title' style='color: #1B1B1E'>
+            TEAM LIFT
+          </h1>
+          <div style='width: 52vw; border-top: solid; border-color: white;'>
+          </div>
+          <h1 id='title'>
+            WHO WE ARE
+          </h1>
+          </dir>
+        </div>
+        <br>
+        <div class='row'>
+          <div class="col">
+            <div class='row'>
+              <div class="col">
+                <img width= '200px' src='../images/ben.jpg'>
+              </div>
+              <div style='color: white'class="col">
+                <p style='font-weight: bold'>
+                  Ben Newell, MBA
+                </p>
+                <p style='font-weight: bold; color: #1B1B1E'>  
+                  President / Product Development
+                </p>
+                <p>
+                  Ben completed his MBA at Rockhurst University (AACSB). He has focused his time and effort on Business Intelligence. Acquiring  best practices from two  well known entities in Kansas City.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class='row'>
+              <div class="col">
+                <img src='../images/zach.PNG'>
+              </div>
+              <div style='color: white'class="col">
+                <p style='font-weight: bold'>
+                  Zach Newell, MBA
+                </p>
+                <p style='font-weight: bold; color: #1B1B1E'>   
+                  VP of Automation
+                </p>
+                <p>
+                  Zach brings a sound VBA and BI background to the team with over 4 years of dashboard development and automation experience. He also completed his MBA at Rockhurst University (AACSB).
+                </p>
+              </div>
+            </div>
+          </div>
+          
+        </div>
+        <div style='justify-content: center' class="row">
+          <div class="col-4">
+          </div>
+        </div>
+      </div>
+    </section>
+    <div style='border-top: solid; border-color: white;'>
+    </div>
     <footer>     
       <div class="container">
-        <p>&copy; Created by Ben Newell. All Rights Reserved.</p>
+        <p>&copy; Created by Lift LLC. All Rights Reserved.</p>
+        <p>Address: 905 McGee St. #289</p>
+        <p>Phone: (785) 633-5715</p>
         <ul class="list-inline list-social">
           <li class="list-inline-item social-twitter">
             <a href="#">
@@ -134,28 +270,7 @@
       feather.replace()
     </script>
     <script class="js">
-      function hide(){
-        document.getElementById("intro").setAttribute("display", "none");
-      }
     </script>
-    <script class="js">
-      function fade(){
-        var documentv = $(document),
-            fadeElement = $('.fade-scroll');
-                document.on('scroll', function (){
-          var currentScrollPosition = documentv.scrollTop();
-          fadeElement.each(function(){
-            var $this = $(this),
-                elementOffsetTop = $this.offset().top;
-            if (currentScrollPosition > elementOffsetTop){
-            $this.css('opacity', 1-(currentScrollPosition-elementOffsetTop)/400)
-            }
-          })
-        })
-
-      }
-    </script>
-
   </body>
 
 </html>
