--- a/views/index.hbs
+++ b/views/index.hbs
@@ -183,7 +183,7 @@ class='fade-scroll' display='block' id='services'>
           <div class="col">
             <div class='row'>
               <div class="col">
-                <img width= '200px' src='../images/ben.png'>
+                <img src='../images/zach.PNG'>
               </div>
               <div style='color: white'class="col">
                 <p style='font-weight: bold'>
