remove product section for now

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -103,7 +103,7 @@ class='fade-scroll' display='block' id='services'>
             SERVICES
           </h1>
           <div class='row' id='titleSub2'>
-            <div class='col'>
+            {{!-- <div class='col'>
               <p>Products</p>
               <ul>
                 <li id='titleSub2Sub'>
@@ -116,7 +116,7 @@ class='fade-scroll' display='block' id='services'>
                   CompACT
                 </li>
               </ul>
-            </div>
+            </div> --}}
             <div class='col'>
               <p>Consulting</p>
               <ul>
