change phone number

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -229,8 +229,8 @@ class='fade-scroll' display='block' id='services'>
     <footer>     
       <div class="container">
         <p>&copy; Created by Lift LLC. All Rights Reserved.</p>
-        <p>Address: 905 McGee St. #289</p>
-        <p>Phone: (785) 633-5715</p>
+        <p>Address: 905 McGee St. #289, Kansas City, MO 64106</p>
+        <p>Phone: (913) 297-9239</p>
         <ul class="list-inline list-social">
           <li class="list-inline-item social-twitter">
             <a href="#">
