--- a/views/index.hbs
+++ b/views/index.hbs
@@ -231,6 +231,8 @@ class='fade-scroll' display='block' id='services'>
         <p>&copy; Created by Lift LLC. All Rights Reserved.</p>
         <p>Address: 905 McGee St. #289, Kansas City, MO 64106</p>
         <p>Phone: (913) 297-9239</p>
+        <p>Email: sales@liftkc.com</p>
+
         <ul class="list-inline list-social">
           <li class="list-inline-item social-twitter">
             <a href="#">
