remove social media icons

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -233,7 +233,7 @@ class='fade-scroll' display='block' id='services'>
         <p>Phone: (913) 297-9239</p>
         <p>Email: sales@liftkc.com</p>
 
-        <ul class="list-inline list-social">
+        {{!-- <ul class="list-inline list-social">
           <li class="list-inline-item social-twitter">
             <a href="#">
               <i class="fa fa-twitter"></i>
@@ -249,7 +249,7 @@ class='fade-scroll' display='block' id='services'>
               <i class="fa fa-google-plus"></i>
             </a>
           </li>
-        </ul>
+        </ul> --}}
       </div>
     </footer>
 
