--- a/views/index.hbs
+++ b/views/index.hbs
@@ -183,7 +183,7 @@ class='fade-scroll' display='block' id='services'>
           <div class="col">
             <div class='row'>
               <div class="col">
-                {{!-- <img style='height: 300px' src='../images/BenStatue.png'> --}}
+                <img style='height: 300px' src='../images/ben.png'>
               </div>
               <div style='color: white'class="col">
                 <p style='font-weight: bold'>
@@ -201,7 +201,7 @@ class='fade-scroll' display='block' id='services'>
           <div class="col">
             <div class='row'>
               <div class="col">
-                {{!-- <img src='../images/zach.PNG'> --}}
+                <img src='../images/zach.PNG'>
               </div>
               <div style='color: white'class="col">
                 <p style='font-weight: bold'>
