--- a/views/index.hbs
+++ b/views/index.hbs
@@ -183,7 +183,7 @@ class='fade-scroll' display='block' id='services'>
           <div class="col">
             <div class='row'>
               <div class="col">
-                <img style='height: 300px' src='../images/BenStatue.png'>
+                <img style='height: 300px' src='../images/bens.png'>
               </div>
               <div style='color: white'class="col">
                 <p style='font-weight: bold'>
