--- a/views/index.hbs
+++ b/views/index.hbs
@@ -48,6 +48,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" style='font-size: 15px; font-weight: bold' href="#contact">CONTACT</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" style='font-size: 15px; font-weight: bold' href="https://benmnewell.wixsite.com/website">SCHEDULE</a>
+            </li>
           </ul>
         </div>
       </div>
