--- a/views/index.hbs
+++ b/views/index.hbs
@@ -80,7 +80,9 @@
           <h3 id='titleSubTop'>
             MISSION | PROVIDE LIFT<br><br>
           </h3>
-          </dir>
+          <button style="color: rgb(46, 185, 46)" type="button" class="btn btn-light">Tableau</button>
+          <button style="color: red" type="button" class="btn btn-dark">Oracle</button>
+          <button type="button" class="btn btn-light">New to Data/Analytics?</button>
         </div>
         <br>
         <div style='justify-content: center' class="row">
