change button css

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -80,9 +80,18 @@
           <h3 id='titleSubTop'>
             MISSION | PROVIDE LIFT<br><br>
           </h3>
-          <button style="color: rgb(46, 185, 46)" type="button" class="btn btn-light">Tableau</button>
-          <button style="color: red" type="button" class="btn btn-dark">Oracle</button>
-          <button type="button" class="btn btn-light">New to Data/Analytics?</button>
+          <div class='row'>
+            <button style="color: rgb(46, 185, 46)" type="button" class="btn btn-light">Tableau</button>
+          <div style='width: 10px'>
+          </div>
+            <button style="color: red" type="button" class="btn btn-dark">Oracle</button>
+          </div>
+          <div class='row' style='height: 10px'>
+
+          </div>
+          <div class='row'>
+            <button style="" type="button" class="btn btn-light">New to Data/Analytics?</button>
+          </div>
         </div>
         <br>
         <div style='justify-content: center' class="row">
