change button css

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -90,7 +90,7 @@
 
           </div>
           <div class='row'>
-            <button style="" type="button" class="btn btn-light">New to Data/Analytics?</button>
+            <button style="font-size: 12px" type="button" class="btn btn-light">New to Data/Analytics?</button>
           </div>
         </div>
         <br>
