add new to analytics section

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -101,7 +101,7 @@
     <div style='border-top: solid; border-color: white;'>
     </div>
     
-    <section class='fade-scroll' style='display: block' id='newToAnalytics'>
+    <section class='fade-scroll' style='display: none' id='newToAnalytics'>
       <div style='justify-content: center' class="container">
         <div style='justify-content: center;' class="row">
         </div>
