--- a/views/index.hbs
+++ b/views/index.hbs
@@ -78,8 +78,8 @@
           <h3 id='titleSubTop'>
             MISSION | PROVIDE LIFT<br><br>
           </h3>
-          <div class='row'>
-            <button onClick='showNewToAnalytics()'style="font-size: 12px" type="button" class="btn btn-light">New to Data/Analytics?</button>
+          <div href="#about" class='row'>
+            <button  onClick='showNewToAnalytics()'style="font-size: 12px" type="button" class="btn btn-light">New to Data/Analytics?</button>
           </div>
           <div class='row' style='height: 10px'>
           </div>
@@ -124,7 +124,7 @@
               <i  class="fa fa-file-text fa-3x"></i>&nbsp;&nbsp;
             </div>
             <h3>1. Data Sources</h3>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+            <p>Data is the most important asset for businesses today. Whether you are pointing to text files, excel, SQL databases, NoSQL databases, API we are here to help. </p>
             <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
           </div>
           <div class="col-lg-2">
@@ -132,7 +132,7 @@
               <i  class="fa fa-database fa-3x"></i>
             </div>
             <h3>2. Data Storage</h3>
-            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+            <p>Once the important data is identified and connected, identify a solution to house that data for easy access and manipulation.</p>
             <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
           </div>
           <div class="col-lg-2">
@@ -140,22 +140,24 @@
               <i  class="fa fa-filter fa-3x"></i>
             </div>            
             <h3>3. Data Prep</h3>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <p>Not all data sources are formatted to perfection. There are plenty of tools out there to extract, transform, and load your data in perfect form.  </p>
             <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
           </div>
           <div class="col-lg-2">
             <div class=''>
               <i  class="fa fa-bar-chart fa-3x"></i>&nbsp;&nbsp;
               <i  class="fa fa-pie-chart fa-3x"></i>
-            </div>            <h3>4. Data Visualization</h3>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            </div>           
+            <h3>4. Data Visualization</h3>
+            <p>The human mind does not easily consume data in a table. Pull out KPIs and visually represent it. LiftKC uses cutting edge data visualization tools to create, automate, and present data on the fly and in a professional manner.</p>
             <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
           </div>
           <div class="col-lg-2">
             <div class=''>
               <i  class="fa fa-users fa-3x"></i>&nbsp;&nbsp;
-            </div>            <h3>5. Distribution</h3>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            </div>            
+            <h3>5. Distribution</h3>
+            <p>Keep your end users in mind by putting distribution methods in place early. LiftKC will help you utilize Oracle, Tableau, or custom websites to give your customers insights on demand.</p>
             <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
           </div>
           <div class="col-lg-1">
