navigate between tableau and oracle sections.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -339,10 +339,10 @@
                   Ben Newell, MBA
                 </p>
                 <p style='font-weight: bold; color: #1B1B1E'>  
-                  President / Product Development
+                 Founder / Tableau Consultant
                 </p>
                 <p>
-                  Ben completed his MBA at Rockhurst University (AACSB). He has focused his time and effort on Business Intelligence. Acquiring  best practices from two  well known entities in Kansas City.
+                  Ben completed his MBA at Rockhurst University (AACSB). He has focused his time and effort on Business Intelligence. Acquiring  best practices from three well known entities in Kansas City.
                 </p>
               </div>
             </div>
@@ -357,7 +357,7 @@
                   Zach Newell, MBA
                 </p>
                 <p style='font-weight: bold; color: #1B1B1E'>   
-                  VP of Automation
+                  Founder / Oracle Consultant
                 </p>
                 <p>
                   Zach brings a sound VBA and BI background to the team with over 4 years of dashboard development and automation experience. He also completed his MBA at Rockhurst University (AACSB).
@@ -378,9 +378,11 @@
     <footer>     
       <div class="container">
         <p>&copy; Created by Lift LLC. All Rights Reserved.</p>
-        <p>Address: 905 McGee St. #289, Kansas City, MO 64106</p>
-        <p>Phone: (913) 297-9239</p>
-        <p>Email: sales@liftkc.com</p>
+        <p>No affiliation with Tableau or Oracle.</p>
+        <br>
+        <p>905 McGee St. #289, Kansas City, MO 64106</p>
+        <p>(913) 297-9239</p>
+        <p>sales@liftkc.com</p>
       </div>
     </footer>
 
