start tableau text.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -186,50 +186,37 @@
 
         <!-- Three columns of text below the carousel -->
         <div class="row">
-          <div class="col-lg-1">
-          </div>
-          <div class="col-lg-2">
+          <div class="col-lg-3">
             <div class=''>
               <i  class="fa fa-file-text fa-3x"></i>&nbsp;&nbsp;
             </div>
-            <h3>1. Data Sources</h3>
-            <p>Data is the most important asset for businesses today. Whether you are pointing to text files, excel, SQL databases, NoSQL databases, API we are here to help. </p>
+            <h3>1. Tableau Prep</h3>
+            <p>Getting those dispurse datasources together can be complicated. Tableau Prep allows you to join and transform your datasets exactly how you need them. </p>
             <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
           </div>
-          <div class="col-lg-2">
+          <div class="col-lg-3">
             <div class=''>
               <i  class="fa fa-database fa-3x"></i>
             </div>
-            <h3>2. Data Storage</h3>
-            <p>Once the important data is identified and connected, identify a solution to house that data for easy access and manipulation.</p>
+            <h3>2. Tableau Desktop</h3>
+            <p>Once your data is ready, point Tableau Desktop to your data for visual insights.</p>
             <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
           </div>
-          <div class="col-lg-2">
+          <div class="col-lg-3">
             <div class=''>
               <i  class="fa fa-filter fa-3x"></i>
             </div>            
-            <h3>3. Data Prep</h3>
+            <h3>3. Tableau Server</h3>
             <p>Not all data sources are formatted to perfection. There are plenty of tools out there to extract, transform, and load your data in perfect form.  </p>
             <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
           </div>
-          <div class="col-lg-2">
+          <div class="col-lg-3">
             <div class=''>
-              <i  class="fa fa-bar-chart fa-3x"></i>&nbsp;&nbsp;
-              <i  class="fa fa-pie-chart fa-3x"></i>
-            </div>           
-            <h3>4. Data Visualization</h3>
-            <p>The human mind does not easily consume data in a table. Pull out KPIs and visually represent it. LiftKC uses cutting edge data visualization tools to create, automate, and present data on the fly and in a professional manner.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
-          </div>
-          <div class="col-lg-2">
-            <div class=''>
-              <i  class="fa fa-users fa-3x"></i>&nbsp;&nbsp;
+              <i  class="fa fa-filter fa-3x"></i>
             </div>            
-            <h3>5. Distribution</h3>
-            <p>Keep your end users in mind by putting distribution methods in place early. LiftKC will help you utilize Oracle, Tableau, or custom websites to give your customers insights on demand.</p>
+            <h3>3. Tableau Portal</h3>
+            <p>Not all data sources are formatted to perfection. There are plenty of tools out there to extract, transform, and load your data in perfect form.  </p>
             <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
-          </div>
-          <div class="col-lg-1">
           </div>
         </div>
 
