--- a/views/index.hbs
+++ b/views/index.hbs
@@ -79,15 +79,15 @@
             MISSION | PROVIDE LIFT<br><br>
           </h3>
           <div href="#about" class='row'>
-            <button  onClick='showNewToAnalytics()'style="font-size: 12px" type="button" class="btn btn-light">New to Data/Analytics?</button>
+            <button  onClick='showNewToAnalytics()'style="font-size: 15px; height: 50px; width:300px" type="button" class="btn btn-light">New to Data/Analytics?</button>
           </div>
           <div class='row' style='height: 10px'>
           </div>
           <div class='row'>
-            <button onClick= 'showTableau()' style="color: rgb(46, 185, 46)" type="button" class="btn btn-light">Tableau</button>
+            <button onClick= 'showTableau()' style="font-size: 15px; height: 50px; width:300px; color: rgb(46, 185, 46)" type="button" class="btn btn-light">Tableau</button>
           <div style='width: 10px'>
           </div>
-            <button onClick= 'showOracle()' style="color: red" type="button" class="btn btn-dark">Oracle</button>
+            <button onClick= 'showOracle()' style="font-size: 15px; height: 50px; width:300px; color: red" type="button" class="btn btn-dark">Oracle</button>
           </div>
         </div>
         <br>
